--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "home-page": "http://YacqubAdan.github.io/movie-app",
   "name": "movie-app",
   "version": "0.1.0",
   "private": true,
@@ -7,16 +8,21 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
+    "github-pages": "^3.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-youtube": "^9.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
